@@ -1,5 +1,6 @@
 
 vgabios-0.3a (Not released yet!!)
+    . added 640x400x8, 640x480x8, 800x600x8 (800x600 is partly shown in bochs window)
     . added 320x200x8 vbe support (uses the standard 320x200x8 vga mode to
       display, this allows for testing & having something on screen as well,
       at least until bochs host side display is up & running)
